--- a/style.css
+++ b/style.css
@@ -41,6 +41,16 @@ h1 {
 	margin: -80px 0 40px;
 }
 
+.year {
+	font-size: 200px;
+	z-index: -1;
+	opacity: 0.2;
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
 .countdown {
 	display: flex;
 	transform: scale(2);
@@ -58,9 +68,17 @@ h1 {
 	margin: 0 0 5px;
 }
 
+.loading {
+	font-size: 50px;
+}
+
 @media (max-width: 500px) {
 	h1 {
 		font-size: 45px;
+	}
+
+	.year {
+		font-size: 100px;
 	}
 
 	.time {
